--- a/RietRob.Desktop.UI/App.config
+++ b/RietRob.Desktop.UI/App.config
@@ -5,7 +5,7 @@
   </configSections>
 
   <log4net>
-    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+    <appender name="RollingInstallerAppender" type="log4net.Appender.RollingFileAppender">
       <file type="log4net.Util.PatternString" value="%property{LogFile}.txt"/>
       <appendToFile value="true" />
       <rollingStyle value="Size"/>
@@ -18,7 +18,7 @@
     </appender>
     <root>
       <level value="INFO"/>
-      <appender-ref ref="RollingFileAppender"/>
+      <appender-ref ref="RollingInstallerAppender"/>
     </root>
   </log4net>
 
