--- a/RietRob.Desktop.UI/App.config
+++ b/RietRob.Desktop.UI/App.config
@@ -6,14 +6,14 @@
 
   <log4net>
     <appender name="RollingInstallerAppender" type="log4net.Appender.RollingFileAppender">
-      <file type="log4net.Util.PatternString" value="%property{LogFile}.txt"/>
+      <file type="log4net.Util.PatternString" value="%property{LogFile}.log"/>
       <appendToFile value="true" />
       <rollingStyle value="Size"/>
       <maximumFileSize value="10MB"/>
       <maxSizeRollBackups value="5" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{ABSOLUTE} [%logger] %level - %message%newline%exception"/>
+        <conversionPattern value="[%level] %date{ABSOLUTE} - %message%newline%exception"/>
       </layout>
     </appender>
     <root>
