--- a/RietRob.Desktop.UI/App.config
+++ b/RietRob.Desktop.UI/App.config
@@ -17,7 +17,7 @@
       </layout>
     </appender>
     <root>
-      <level value="INFO"/>
+      <level value="DEBUG"/>
       <appender-ref ref="RollingInstallerAppender"/>
     </root>
   </log4net>
