--- a/RietRob.Desktop.UI/RietRob.Desktop.UI.csproj
+++ b/RietRob.Desktop.UI/RietRob.Desktop.UI.csproj
@@ -128,6 +128,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Installer\BGInfo.zip" />
+    <None Include="Installer\Test.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Installer\usbdeviewx64_3.00.zip" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
